Prevent refresh from top on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overscroll-behavior-y: contain;
 }
 
 html, body, #root {
